Simplify BuiltinFunctionRepository.resolve
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>