@@ -156,18 +156,17 @@ class BuiltinFunctionRepositoryTest {
     BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
     repo.register(mockfunctionResolver);
 
-    assertEquals(functionExpressionBuilder,
-        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE), functionSignature)
-            .apply(functionProperties));
+    assertEquals(functionExpressionBuilder, repo.resolve(functionProperties,
+        Collections.singletonList(DEFAULT_NAMESPACE), functionSignature));
   }
 
   @Test
   void resolve_should_not_cast_arguments_in_cast_function() {
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
+        repo.resolve(functionProperties,
+                Collections.singletonList(DEFAULT_NAMESPACE),
                 registerFunctionResolver(CAST_TO_BOOLEAN.getName(), DATETIME, BOOLEAN))
-            .apply(functionProperties)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("cast_to_boolean(string)", function.toString());
   }
@@ -177,9 +176,9 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
+        repo.resolve(functionProperties,
+                Collections.singletonList(DEFAULT_NAMESPACE),
                 registerFunctionResolver(mockFunctionName, STRING, STRING))
-            .apply(functionProperties)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(string)", function.toString());
   }
@@ -189,9 +188,9 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("byte");
     FunctionImplementation function =
-        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
+        repo.resolve(functionProperties,
+                Collections.singletonList(DEFAULT_NAMESPACE),
                 registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
-            .apply(functionProperties)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(byte)", function.toString());
   }
@@ -207,8 +206,7 @@ class BuiltinFunctionRepositoryTest {
     registerFunctionResolver(CAST_TO_BOOLEAN.getName(), STRING, STRING);
 
     FunctionImplementation function =
-        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE), signature)
-            .apply(functionProperties)
+        repo.resolve(functionProperties, Collections.singletonList(DEFAULT_NAMESPACE), signature)
             .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(cast_to_boolean(string))", function.toString());
   }
@@ -217,9 +215,9 @@ class BuiltinFunctionRepositoryTest {
   void resolve_should_throw_exception_for_unsupported_conversion() {
     ExpressionEvaluationException error =
         assertThrows(ExpressionEvaluationException.class, () ->
-            repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
+            repo.resolve(functionProperties,
+                    Collections.singletonList(DEFAULT_NAMESPACE),
                     registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
-                .apply(functionProperties)
                 .apply(functionProperties, ImmutableList.of(mockExpression)));
     assertEquals(error.getMessage(), "Type conversion to type STRUCT is not supported");
   }
@@ -234,8 +232,9 @@ class BuiltinFunctionRepositoryTest {
     repo.register(mockfunctionResolver);
 
     ExpressionEvaluationException exception = assertThrows(ExpressionEvaluationException.class,
-        () -> repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE),
-            new FunctionSignature(FunctionName.of("unknown"), Arrays.asList())));
+        () -> repo.resolve(functionProperties,
+            Collections.singletonList(DEFAULT_NAMESPACE),
+            new FunctionSignature(FunctionName.of("unknown"), List.of())));
     assertEquals("unsupported function name: unknown", exception.getMessage());
   }
 
